--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,13 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   flutter_screenutil: ^5.9.3
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
+
 
 flutter:
   uses-material-design: true
